--- a/Forecast.bib
+++ b/Forecast.bib
@@ -2,6 +2,34 @@
 % This is compiled from a lot of other bib files
 % Encoding: Cp1252
 
+@article{Hegreetal2025,
+author = {Håvard Hegre and Paola Vesco and Michael Colaresi and Jonas Vestby and Alexa Timlick and Noorain Syed Kazmi and Angelica Lindqvist-McGowan and Friederike Becker and Marco Binetti and Tobias Bodentien and Tobias Bohne and Patrick T. Brandt and Thomas Chadefaux and Simon Drauz and Christoph Dworschak and Vito D’Orazio and Hannah Frank and Cornelius Fritz and Kristian Skrede Gleditsch and Sonja Häffner and Martin Hofer and Finn L Klebe and Luca Macis and Alexandra Malaga and Marius Mehrl and Nils W Metternich and Daniel Mittermaier and David Muchlinski and Hannes Mueller and Christian Oswald and Paola Pisano and David Randahl and Christopher Rauh and Lotta Rüter and Thomas Schincariol and Benjamin Seimon and Elena Siletti and Marco Tagliapietra and Chandler Thornhill and Johan Vegelius and Julian Walterskirchen},
+title ={The 2023/24 VIEWS Prediction challenge: Predicting the number of fatalities in armed conflict, with uncertainty},
+
+journal = {Journal of Peace Research},
+volume = {0},
+number = {0},
+pages = {00223433241300862},
+year = {2025},
+doi = {10.1177/00223433241300862},
+
+URL = { 
+    
+        https://doi.org/10.1177/00223433241300862
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1177/00223433241300862
+    
+    
+
+}
+,
+    abstract = { Governmental and nongovernmental organizations have increasingly relied on early-warning systems of conflict to support their decisionmaking. Predictions of war intensity as probability distributions prove closer to what policymakers need than point estimates, as they encompass useful representations of both the most likely outcome and the lower-probability risk that conflicts escalate catastrophically. Point-estimate predictions, by contrast, fail to represent the inherent uncertainty in the distribution of conflict fatalities. Yet, current early warning systems are preponderantly focused on providing point estimates, while efforts to forecast conflict fatalities as a probability distribution remain sparse. Building on the predecessor VIEWS competition, we organize a prediction challenge to encourage endeavours in this direction. We invite researchers across multiple disciplinary fields, from conflict studies to computer science, to forecast the number of fatalities in state-based armed conflicts, in the form of the UCDP ‘best’ estimates aggregated to two units of analysis (country-months and PRIO-GRID-months), with estimates of uncertainty. This article introduces the goal and motivation behind the prediction challenge, presents a set of evaluation metrics to assess the performance of the forecasting models, describes the benchmark models which the contributions are evaluated against, and summarizes the salient features of the submitted contributions. }
+}
 @article{gneitingkatzfuss2014,
    author = "Gneiting, Tilmann and Katzfuss, Matthias",
    title = "Probabilistic Forecasting", 
